--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,7 +2,37 @@
 <head>
     <!-- <meta> tags> -->
     <title>Ideasheet</title>
-    <script src="https://cdn.tailwindcss.com"></script>    
+    <style>
+        body {
+            font-size: 14px;
+        }
+        .page {           
+            width: 794px;
+            height: 1123px;
+            padding: 15px;
+        }
+
+        .page-header {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .page-header img {
+            width: 400px;
+            height: auto;
+        }
+
+        .sheet-header {
+            border: 3px solid black; 
+            display: flex; 
+            justify-content: space-around; 
+            align-items: center; 
+            min-height: 120px;   
+            margin-top: 10px;         
+        }
+    </style>
+    
+
 </head>
 
 <body>
