fix qkyt template

--- a/views/ideasheet_qkyt.hbs
+++ b/views/ideasheet_qkyt.hbs
@@ -7,7 +7,7 @@
     <title>Ideasheet</title>
     <style>
         body {
-            font-size: 14px;
+            font-size: 12px;
         }
         .page {           
             width: 794px;
@@ -117,43 +117,43 @@
                     <div style="min-height: 80px;border-bottom: 1px dotted black; padding-left: 6px;">
                         <p>{{data.before}}</p>
                     </div>                   
-                    <div style="display: flex; margin-top:1px; border:1px solid black;">
-                        <div style="width: 20%; border-right: 1px solid black;padding:2px;">Kapan :</div>
-                        <div style="width: 80%; padding-left: 2px;">
+                    <div style="display: flex; margin-top:1px; border:1px solid black; font-size: 10px;">
+                        <div style="width: 30%; border-right: 1px solid black;padding:2px;">Kapan :</div>
+                        <div style="width: 70%; padding-left: 2px;">
                             <span>{{data.beforeKapan}}</span>
                         </div>
                     </div>
-                    <div style="display: flex; border:1px solid black;">
-                        <div style="width: 20%; border-right: 1px solid black;padding:2px;">Dimana :</div>
-                        <div style="width: 80%; padding-left: 2px;">
+                    <div style="display: flex; border:1px solid black; font-size: 10px;">
+                        <div style="width: 30%; border-right: 1px solid black;padding:2px;">Dimana :</div>
+                        <div style="width: 70%; padding-left: 2px;">
                             <span>{{data.beforeDimana}}</span>
                         </div>
                     </div>
-                    <div style="display: flex; border:1px solid black;">
-                        <div style="width: 20%; border-right: 1px solid black;padding:2px;">Siapa :</div>
-                        <div style="width: 80%; padding-left: 2px;">
+                    <div style="display: flex; border:1px solid black; font-size: 10px;">
+                        <div style="width: 30%; border-right: 1px solid black;padding:2px;">Siapa :</div>
+                        <div style="width: 70%; padding-left: 2px;">
                             <span>{{data.beforeSiapa}}</span>
                         </div>
                     </div>
-                    <div style="display: flex; border:1px solid black;">
-                        <div style="width: 20%; border-right: 1px solid black;padding:2px;">Apa :</div>
-                        <div style="width: 80%; padding-left: 2px;">
+                    <div style="display: flex; border:1px solid black; font-size: 10px;">
+                        <div style="width: 30%; border-right: 1px solid black;padding:2px;">Apa :</div>
+                        <div style="width: 70%; padding-left: 2px;">
                             <span>{{data.beforeApa}}</span>
                         </div>
                     </div>
-                    <div style="display: flex; border:1px solid black;">
-                        <div style="width: 20%; border-right: 1px solid black;padding:2px;">Bagaimana :</div>
-                        <div style="width: 80%; padding-left: 2px;">
+                    <div style="display: flex; border:1px solid black; font-size: 10px;">
+                        <div style="width: 30%; border-right: 1px solid black;padding:2px;">Bagaimana :</div>
+                        <div style="width: 70%; padding-left: 2px;">
                             <span>{{data.beforeBagaimana}}</span>
                         </div>
                     </div>
-                    <div style="display: flex; border:1px solid black;">
-                        <div style="width: 20%; border-right: 1px solid black;padding:2px;">Apa yg terjadi :</div>
-                        <div style="width: 80%; padding-left: 2px;">
+                    <div style="display: flex; border:1px solid black; font-size: 10px;">
+                        <div style="width: 30%; border-right: 1px solid black;padding:2px;">Apa yg terjadi :</div>
+                        <div style="width: 70%; padding-left: 2px;">
                             <span>{{data.beforeApaYangTerjadi}}</span>
                         </div>
                     </div>
-                    <div style="border: 1px solid black;">
+                    <div style="border: 1px solid black; font-size: 10px;">
                         Bagaimana hal ini bisa menjadi masalah ? (Situasi)
                     </div>
                     <div style="height: 150x; display: flex; border:1px solid black">
@@ -161,7 +161,7 @@
                             <p>{{data.beforeSituasi}}</p>
                         </div>
                         <div style="flex: 1 1 0">
-                            <img style="width: 100%; height: 150px;" src="{{data.beforeImage}}" />
+                            <img style="width: 100%; height: 100px;" src="{{data.beforeImage}}" />
                         </div>                        
                     </div>
                 </div>
@@ -172,8 +172,8 @@
                     <div style="min-height: 80px;border-bottom: 1px dotted black;padding-left:6px;">
                         <p>{{data.after}}</p>
                     </div>
-                    <div style="height: 200px; padding: 2px">
-                        <img style="width: 100%; height: 200px;" src="{{data.afterImage}}" />
+                    <div style="height: 150px; padding: 2px">
+                        <img style="width: 100%; height: 150px;" src="{{data.afterImage}}" />
                     </div> 
                     <div style="border-top:1px solid black; display: flex;">
                         <div style="border-right: 1px solid black; width: 75%;">
@@ -242,7 +242,7 @@
             </div>
         </div>
         <div><span>Note: Untuk Penjelasan Detail Dgn Gambar bisa dilampirkan gambar.</span></div>
-        <div style="display: flex; margin-top:10px;">
+        <div style="display: flex; margin-top:5px;">
             <div style="width: 25%;text-align: center;border:2px solid black">
                 <div style="border-bottom:2px solid black;">Diterima</div>
                 <div style="min-height: 75px;line-height: 75px;">{{data.diterimaOleh}}</div>
